2010-08-28	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* libfs/src/pipe/pipe.c: Remove unreachable line flagged by Coverity as
	dead code.

2010-08-27	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libcsupport/src/ctermid.c: Add comment explaining that this use of
	strcpy() is a potential buffer overrun but because the API does not
	provide a way to know the length of the user provided buffer, there
	is nothing we can do about it.

2010-08-27	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libmisc/shell/main_date.c: Use snprintf() not sprintf().

2010-08-27	Joel Sherrill <joel.sherrilL@OARcorp.com>

	PR 1693/filesystem
	* libfs/src/imfs/memfile.c: IMFS_memfile_get_block_pointer() was
	checking incorrect pointer and thus had dead code.

2010-08-27	Joel Sherrill <joel.sherrilL@OARcorp.com>

	PR 1692/filesystem
	* libcsupport/include/rtems/libio.h, libfs/src/devfs/devfs_eval.c,
	libfs/src/imfs/imfs_eval.c: Fix implementation and use of
	rtems_libio_is_valid_perms().

2010-08-26	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libfs/src/defaults/default_evalpath.c,
	libfs/src/defaults/default_evaluate_link.c: Removed superfluous
	assignment.

2010-08-26	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libcsupport/src/mount.c, libcsupport/src/mount-mgr.c: Avoid
	strcpy().

2010-08-26	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libcsupport/src/sync.c: Add comment explaining why the return value
	from fsync() and fdatasync() is not checked.

2010-08-26	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libmisc/monitor/mon-symbols.c: Fix length of buffer passed to
	strncpy() so there is room for a NULL terminator.

2010-08-26	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libcsupport/src/eval.c: Make some filesystem implementation
	correctness checks conditional on RTEMS_DEBUG.

2010-08-26	Chris Johns <chrisj@rtems.org>

	* libfs/src/defaults/default_evaluate_link.c: Remove assignment.

	* libfs/src/rfs/rtems-rfs-file.c: Check then load the inode is not